# AlphaWindowKmbox-Python

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
native/: README.md  build_kma.py  kmA_enhanced.cpp
src/alphawindow_kmbox/: __init__.py
tests/: test_kmbox_native_binding.py  test_kmbox_plugin.py
