[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphawindow-kmbox"
version = "0.1.0"
description = "Generic kmbox recording input plugin for AlphaWindow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alphawindow>=0.1.3",
  "pynput>=1.7.6; platform_system == 'Windows'",
]

[project.entry-points."alphawindow.plugins"]
kmbox = "alphawindow_kmbox"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["alphawindow_kmbox*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
alphawindow_kmbox = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src", "../AlphaWindow-Python/src"]
testpaths = ["tests"]
